--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingCard.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingCard.vm
@@ -6,6 +6,12 @@
 -->
 <script>
 $(function(){
+
+	$(".set-main").on("click", function(){
+		$("#bankacco").val($(this).attr("bankacco"));
+		$("#form-settingCard").attr("action", "../setting/settingMainCard.htm");
+		$("#form-settingCard").submit();
+	});
 });
 </script>
 </head>
@@ -21,7 +27,9 @@ $(function(){
     </div>
 </div>
 <div class="body">
-
+	<form id="form-settingCard" action="${ufbDomain}/setting/settingCard.htm" method="post">
+	${refreshTools.genInputHtml()}
+	<input id="bankacco" name="bankacco" value="${bankacco}" type="hidden"/>
     <div class="inner clearfix">
         <div class="title">
             <h2 class="title-main">帮助中心</h2>
@@ -45,14 +53,24 @@ $(function(){
 					#set($tailStr=$card.bankacco)
 					#set($start=$tailStr.length() - 4)
 					#set($end=$tailStr.length())
-					<li class="card"><i class="icon"></i>
+					<li class="card 
+						#if($!{card.mainflag}=="Y")
+						card-main	
+						#end
+						"><i class="icon"></i>
                         <div class="card-info">
 							<img src="${staticDomain}/images/bank_${card.bankno}.png">
 							<span>尾号：$tailStr.substring($start,$end)</span>
 						</div>
                         <div class="card-setting">
-							<a tradeacco="${card.tradeacco}" class="set-main" href="#">设为主卡</a>
-							<a tradeacco="${card.tradeacco}" class="set-unbind" href="#">解绑</a></div>
+							#if($!{card.mainflag}!="Y")
+							<a bankacco="${card.bankacco}" class="set-main" 
+								href="#">设为主卡</a>
+							#end
+							<!--
+							<a bankacco="${card.bankacco}" class="set-unbind" href="#">解绑</a>
+							-->
+						</div>
                     </li>
 					#end
                     <li class="card card-add"><a href="${staticDomain}/bankcard/addBankCard.htm">添加银行卡</a></li>
@@ -69,14 +87,15 @@ $(function(){
 							<span>尾号：$tailStr.substring($start,$end)</span>
 						</div>
                         <div class="card-setting">
-							<a tradeacco="${card.tradeacco}" class="set-main" href="#">设为主卡</a>
-							<a tradeacco="${card.tradeacco}" class="set-unbind" href="#">解绑</a></div>
+							<a tradeacco="${card.tradeacco}" class="set-unbind" href="#">激活</a>
+						</div>
                     </li>
 					#end
                 </ul>
             </div>
         </div>
     </div>
+	</form>
 </div>
 <div class="footer">
     <div class="inner clearfix">
